[package]
name = "async-mp4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm = ["chrono/wasmbind"]

[dependencies]
futures = "0.3.21"
async-trait = "0.1.56"
thiserror = "1.0"
byteorder_async = {version="1.2.0", features=["futures_async"] }
uuid = { version = "1.1.2" }
chrono = "0.4.19"
fixed="1.16.0"
fixed-macro = "1.1.1"
bitregions = "0.2.5"
