[package]
name = "async-mp4"
version = "0.1.1"
edition = "2021"
authors = ["Frédéric Nieto <frederic.artus.nieto@gmail.com>"]
description = "Async Mp4 Muxer and Demuxer in pure rust"
categories = ["video", "audio", "encoding", "decoding", "muxing"]
keywords = ["mp4", "mux", "avc", "opus", "async"]
license = "MIT/Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm = ["chrono/wasmbind"]

[dependencies]
futures = "0.3.21"
async-trait = "0.1.56"
thiserror = "1.0"
byteorder_async = {version="1.2.0", features=["futures_async"] }
uuid = { version = "1.1.2" }
chrono = "0.4.19"
fixed="1.16.0"
fixed-macro = "1.1.1"
bitregions = "0.2.5"
isolanguage-1 = "0.2.2"
num-traits = "0.2.15"
paste = "1.0.7"
byteorder = "1.4.3"
